--- a/questao6.html
+++ b/questao6.html
@@ -18,7 +18,7 @@
         } else {
             valorTotal = pessoas*20
         }
-        alert(`Total de pessoas: $`)
+        alert(`Total de pessoas: ${pessoas.toFixed(2)}\nTotal de peixes: ${peixes.toFixed(2)}\nValor total: R$ ${valorTotal.toFixed(2)}`)
     </script>
 </body>
 </html>
